--- a/preamble.tex
+++ b/preamble.tex
@@ -48,10 +48,12 @@
 \colorlet{blz}{blue!90!green!40}
 \colorlet{blt}{blue!90!green!30}
 \colorlet{rex}{red!80!black!90!orange!80}
+\colorlet{rey}{red!80!black!90!orange!40}
 \colorlet{ret}{red!80!black!90!orange!30}
 \colorlet{grx}{green!50!black!90!yellow!80}
 \colorlet{gry}{green!50!black!90!yellow!40}
 \colorlet{orx}{orange!80!black!90!yellow!80}
+\colorlet{pux}{blx!50!rex!50!magenta}
 
 \DeclareMathOperator{\Prob}{Prob}
 
